Added new styles

--- a/src/css/Mycampaign.scss
+++ b/src/css/Mycampaign.scss
@@ -152,6 +152,10 @@
     }
   }
 }
+.mycampaign__search-btn,
+.mycampaign__edit-btn {
+  text-decoration: none;
+}
 
 .modal-overlay {
   position: fixed;
