--- a/src/css/CardDedals.scss
+++ b/src/css/CardDedals.scss
@@ -21,6 +21,17 @@
     border: 2px solid #ccc;
   }
 }
+.success-message {
+  color: #2c7a7b;
+  font-size: 1.1rem;
+  line-height: 1.8;
+  font-weight: 500;
+  text-align: center;
+  font-family: "Poppins", "Segoe UI", sans-serif;
+  letter-spacing: 0.5px;
+  word-spacing: 1px;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
 
 .author-right {
   flex: 1;
